--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-app/assets/* linguist-vendored=false
-public/* linguist-vendored=false
-vendor/* linguist-vendored=false
+app/assets/* linguist-vendored
+public/* linguist-vendored
+vendor/* linguist-vendored
